wxc/include/ewxw/wxc_glue.h

/* wxMenuItem */
TClassDefExtend(wxMenuItem,wxObject)
void       wxMenuItem_Check( TSelf(wxMenuItem) _obj, TBool check );
TClass(wxMenuItem) wxMenuItem_Create(  );
void       wxMenuItem_Delete( TSelf(wxMenuItem) _obj );
void       wxMenuItem_Enable( TSelf(wxMenuItem) _obj, TBool enable );
TStringLen wxMenuItem_GetHelp( TSelf(wxMenuItem) _obj, TStringOutVoid _buf );
int        wxMenuItem_GetId( TSelf(wxMenuItem) _obj );
TStringLen wxMenuItem_GetLabel( TSelf(wxMenuItem) _obj, TStringOutVoid _buf );
TStringLen wxMenuItem_GetLabelFromText( TStringVoid text, TStringOutVoid _buf );
TClass(wxMenu) wxMenuItem_GetMenu( TSelf(wxMenuItem) _obj );
void*      wxMenuItem_GetSubMenu( TSelf(wxMenuItem) _obj );
TStringLen wxMenuItem_GetText( TSelf(wxMenuItem) _obj, TStringOutVoid _buf );
TBool      wxMenuItem_IsCheckable( TSelf(wxMenuItem) _obj );
TBool      wxMenuItem_IsChecked( TSelf(wxMenuItem) _obj );
TBool      wxMenuItem_IsEnabled( TSelf(wxMenuItem) _obj );
TBool      wxMenuItem_IsSeparator( TSelf(wxMenuItem) _obj );
TBool      wxMenuItem_IsSubMenu( TSelf(wxMenuItem) _obj );
void       wxMenuItem_SetCheckable( TSelf(wxMenuItem) _obj, int checkable );
void       wxMenuItem_SetHelp( TSelf(wxMenuItem) _obj, TStringVoid str );
void       wxMenuItem_SetId( TSelf(wxMenuItem) _obj, int id );
void       wxMenuItem_SetSubMenu( TSelf(wxMenuItem) _obj, TClass(wxMenu) menu );
void       wxMenuItem_SetText( TSelf(wxMenuItem) _obj, TStringVoid str );